# rustdesk-address-book

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: copilot-instructions.md
.github/agents/: dev.agent.md  reviewer.agent.md
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts  demo-data.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  errors.rs  lib.rs  main.rs  models.rs  rustdesk.rs  storage.rs
src/components/: ConnectionForm.tsx  FolderForm.tsx  LockScreen.tsx  MainPage.tsx  Settings.tsx  TreeView.tsx
src/i18n/: en.ts  index.ts  ru.ts
sync-server/: Cargo.toml  README.md
sync-server/src/: main.rs
