[package]
name = "rustdesk-address-book"
version = "0.1.2"
description = "Encrypted address book for RustDesk connections"
authors = ["Vadim"]
edition = "2021"

[lib]
name = "rustdesk_address_book_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
which = "7"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

